# nightcyber

./: .clang-format  CMakeLists.txt  README.md  common.h  config.h  config_types.h  draw.h  ls.cpp  meson.build  meson_options.txt  pal_linux.h  pal_win32.h  scenes.h  text.h
cmake/: CMakeLists.txt  meson.build  scomp.cpp
engine/: compute.h  loader.h  midi.h  orchestrator.h  platform.h  renderer.h  shader.h
gfx/: blockmania.frag
gfx/symbols/: dcirclesegment.frag  dspiral.frag  dspline32.frag  dvoronoi2.frag  zextrude.frag
meson/: Globber.py  Qt5Globber.py  win32-clang.txt
minification/: symbolize.py
msx/: GenerateNotes.comp  PostProcessNotes.comp  PostProcessTrack.comp  Sequencer.comp  exampleSound.comp
shader-compiler/: CMakeLists.txt  meson.build
studio/: apc40mk2widget.cpp  apc40mk2widget.h  demoapi.cpp  demoapi.h  mainwindow.cpp  mainwindow.h  nanokontrol2Widget.cpp  nanokontrol2Widget.h  renderviewwidget.cpp  renderviewwidget.h  studio.cpp
studio/SurfaceEditor/: SurfaceNode.hpp  SurfaceObject.hpp  SurfaceScene.hpp
subprojects/: QMidi.wrap.txt
